[package]
name = "plugin"
version = "0.1.2"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
description = "Steam Deck plugin for Sound Blaster devices"
repository = "https://github.com/mdonoughe/sbzdeck/"
readme = "README.md"
keywords = ["stream-deck", "sound-blaster"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "mdonoughe/sbzdeck" }

[dependencies]
common = { path = "../common" }
futures = "0.3"
indexmap = { version = "1", features = ["serde-1"] }
sbz-switch = "4"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
streamdeck-rs = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-core", "stream", "time"] }
